# smoller_str

./: Cargo.toml
examples/: basic.rs  basic_function.rs  include_function.rs  some_strings.txt
smoller_str_macro/: Cargo.toml
smoller_str_macro/src/: enumstr.rs  lib.rs  shared.rs  smoller.rs
smoller_str_macro/tests/: 01-parse.rs  02-parse-smoller-default-other.rs  derive_tests.rs
src/: lib.rs
tests/: compiletest.rs
